# nova

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
data/entities/: bendy.xml  cottage.xml  cube.xml  demon.xml  desk.xml  dinosaur.xml  glass_cube.xml  grass.xml  light.xml  monkey.xml  monkey2.xml  tree.xml  tree2.xml
data/resources/: manifest.xml
data/resources/models/: bendy.gltf  cottage.gltf  cube.gltf  demon.gltf  dinosaur.gltf  glass_cube.gltf  grass.gltf  long_grass.gltf  monkey.gltf  tree.gltf
data/scenes/: scene1.xml
data/shaders/: common.glsl
data/shaders/fragment/: default.glsl  lighting.glsl  main.glsl  main_default.glsl  main_depth.glsl  main_skybox.glsl  materials.glsl  normal_mapped.glsl  skybox.glsl  untextured.glsl
data/shaders/vertex/: attributes.glsl  default.glsl  main.glsl  main_default.glsl  main_passthrough.glsl  skybox.glsl
nova/: CMakeLists.txt
nova/src/: camera.cpp  collision_system.cpp  collision_system.hpp  entity_factory.cpp  entity_factory.hpp  exception.hpp  file_system.hpp  game.cpp  game.hpp  gltf.cpp  gltf.hpp  grid.hpp  hash.hpp  logger.cpp  map_parser.cpp  map_parser.hpp  math.cpp  math.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  player.cpp  render_system.cpp  render_system.hpp  renderables.cpp  renderables.hpp  renderer.hpp  scene.cpp  scene.hpp  spatial_system.cpp  spatial_system.hpp  system.cpp  system.hpp  terrain.cpp  terrain.hpp  thread.hpp  time.cpp  time.hpp  trace.cpp  (+6 more)
nova/src/platform/android/: .gitattributes  build.gradle
nova/src/platform/android/src/main/: AndroidManifest.xml
nova/src/platform/android/src/main/cpp/: app.cpp  application.cpp  file_system.cpp  logger.cpp
nova/src/platform/android/src/main/java/com/example/nativeexample/: MainActivity.java
nova/src/platform/default/: application.cpp  file_system.cpp
nova/src/platform/ios/: application.cpp  application.h  wrapper.mm
nova/src/vulkan/: default_pipeline.cpp  default_pipeline.hpp  instanced_pipeline.cpp  instanced_pipeline.hpp  pipeline.cpp  pipeline.hpp  render_resources.cpp  render_resources.hpp  renderer.cpp  skybox_pipeline.cpp  skybox_pipeline.hpp  ubo.cpp  ubo.hpp  vulkan_utils.cpp  vulkan_utils.hpp
nova/src/vulkan/platform/android/: vulkan_window_delegate.cpp
nova/src/vulkan/platform/default/: vulkan_window_delegate.cpp
nova/src/vulkan/platform/ios/: vulkan_window_delegate.mm
nova/src/vulkan/shaders/fragment/: default.glsl  normal_mapped.glsl  untextured.glsl
nova/src/vulkan/shaders/vertex/: default.glsl  instanced.glsl  normal_mapped.glsl  skybox.glsl
osx/: .gitignore  Info.plist
platform/android/: settings.gradle
platform/android/data/: build.gradle
platform/android/gradle/: libs.versions.toml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/android/vcpkg/: vcpkg.json
platform/default/vcpkg/: vcpkg.json
platform/ios/: Info.plist
platform/osx/: build_icon_set.sh
shaders/fragment/: default.glsl  shader.glsl  skybox.glsl
shaders/vertex/: default.glsl  instanced.glsl  shader.glsl  skybox.glsl
src/: application.cpp  camera.cpp  camera.hpp  collision_system.cpp  collision_system.hpp  entity_factory.cpp  entity_factory.hpp  exception.hpp  game.cpp  game.hpp  logger.cpp  main.cpp  map_parser.cpp  map_parser.hpp  math.cpp  math.hpp  model.cpp  model.hpp  platform_paths.cpp  platform_paths.hpp  player.cpp  player.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  resource.hpp  scene.cpp  scene.hpp  sorted_set.hpp  spatial_system.hpp  system.hpp  thread.hpp  time.cpp  time.hpp  trace.hpp  tree_set.hpp  units.hpp  utils.cpp  utils.hpp  (+3 more)
src/platform/android/src/main/: AndroidManifest.xml
src/platform/android/src/main/cpp/: CMakeLists.txt
src/platform/android/src/main/res/values/: themes.xml
src/platform/android/src/main/res/values-night/: themes.xml
src/platform/default/: application.cpp
src/platform/ios/: application.cpp  application.h  application.mm  hello.cpp  hello.hpp  wrapper.mm
src/vulkan/: default_pipeline.cpp  default_pipeline.hpp  instanced_pipeline.cpp  instanced_pipeline.hpp  pipeline.cpp  pipeline.hpp  render_resources.cpp  render_resources.hpp  renderer.cpp  skybox_pipeline.cpp  skybox_pipeline.hpp  vulkan_utils.cpp  vulkan_utils.hpp  vulkan_window_delegate.hpp
src/vulkan/platform/ios/: vulkan_window_delegate.cpp
src/vulkan/shaders/vertex/: default.glsl  instanced.glsl
test/: CMakeLists.txt
test/src/: grid_test.cpp  main.cpp  math_test.cpp  mesh_test.cpp  sorted_set_test.cpp  thread_test.cpp  tree_set_test.cpp  triple_buffer_test.cpp
